--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,29 @@
                     android:src="@drawable/unknown"
                     android:id="@+id/rival"/>
         </LinearLayout>
-
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:gravity="center">
+            <Button
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:text="Jugar"
+                    android:textSize="20dp"
+                    android:layout_gravity="center_horizontal"
+                    android:id="@+id/game"
+            />
+            <Button
+                    android:layout_width="160dp"
+                    android:layout_height="wrap_content"
+                    android:text="Reiniciar"
+                    android:textSize="20dp"
+                    android:layout_gravity="center_horizontal"
+                    android:id="@+id/restart"
+            />
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
